# snipppets

./: -  .gitignore  OwnedValue.h  README.md  aho_corasick.cpp  fibonacci.c  frida_enumerate_modules.py  kcov.rs  mount_multi_partition_iso.sh  number_in_words.py  print_stack_cookie.c  reference_section.c  simple_random.rs  sqrt_mod_n.py  strip_ansi_escapes.py  tcp-proxy.py  win32_subprocess_limited_io.py
arduino/nano_atmega328p/: Makefile  README.md  blink.c  flash.sh  pwm.c
at_your_service/: CMakeLists.txt  README.txt  at_your_service.c
cgroup_bandwidth_limit/: Cargo.toml  Makefile  README.md
cgroup_bandwidth_limit/ebpf/: Makefile  main.c
cgroup_bandwidth_limit/src/: main.rs  mmap.rs
connect-four/: Cargo.toml
connect-four/src/: main.rs
console-breakout/: README.md  main.py
dora/: README.md  dora.py  test_dora.py
minimal-vm/: .gitignore  README.txt  create.sh  init
random-text-generation/: Cargo.toml
random-text-generation/src/: main.rs
simple-chat/: Cargo.toml
simple-chat/src/: main.rs
simple_kernel_module/: .gitignore  README.md
simple_kernel_module/kernel/: Makefile  simpledev.c
simple_kernel_module/user/: Makefile  userland.c
stack-based-vm/: Cargo.toml
stack-based-vm/src/: main.rs
